# omni-agent-desktop

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
agent-core/: README.md  build.mjs  package.json  tsconfig.json
agent-core/e2e/: copilot-live.mjs
agent-core/src/: a2a.test.ts  a2a.ts  approvals.test.ts  approvals.ts  cancel.test.ts  cancel.ts  http.ts  index.ts  memory.ts  paths.ts  rpc.ts  run.test.ts  run.ts  scheduler.ts  secrets.ts  sessions.ts  settings.test.ts  settings.ts  tools.ts
docs/: sidecar.md
docs/plans/: 2026-07-09-thin-ai-a2a-desktop.md
scripts/: start-release.mjs  start-release.test.mjs  validate-build.mjs
src/: App.test.tsx  App.tsx  launcherConfig.ts  ops-make.test.ts  skill-demo.tsx  tauri-api.ts  tauri-shim.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/examples/: e2e.rs
src-tauri/src/: main.rs  memory.rs  providers.rs  scheduler.rs  secrets.rs  settings.rs  sidecar.rs
src-tauri/src/agent/: a2a.rs  a2a_e2e_tests.rs  azure.rs  context.rs  copilot.rs  mod.rs  provider.rs  tools.rs
src/components/: AIResponsePane.tsx  AiChatHistory.tsx  AiTopBar.tsx  AppShell.test.tsx  AppShell.tsx  ChatBubble.tsx  ChatPane.tsx  CheatSheetModal.tsx  Composer.test.tsx  Composer.tsx  ExportToast.tsx  FavoritesList.tsx  FormattedSubtitle.tsx  GlobalKeyframes.tsx  HelpPanel.tsx  LauncherBody.tsx  LauncherResults.tsx  PluginManager.tsx  PluginsView.tsx  QueuedPromptBubble.tsx  ResizeGrip.tsx  ResultList.test.tsx  ResultList.tsx  (+17 more)
(+113 files in other folders)
